Add book yearbook mode
